# benchmark_cmatrix

./: CMakeLists.txt  benchmark_dgemm.cpp
CMatrix/: CMakeLists.txt
CMatrix/include/: CMatrix.h  CTensor.h  CVector.h  resource.h  stdafx.h  targetver.h
CMatrix/src/: CMatrix.cpp  CTensor.cpp  CVector.cpp  dllmain.cpp  stdafx.cpp
CMatrix/tests/: CMakeLists.txt  test1.cpp
include/: debug.hpp  fixture.hpp
